cloud/deployment/k8s_manifest/nvidia-smi.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nvidia-smi
spec:
  restartPolicy: Never
  containers:
  - name: nvidia-smi
    image: nvcr.io/nvidia/cuda:10.2-base
    command: ["/bin/sh", "-c", "nvidia-smi; sleep 600"]
    command: ["nvidia-smi"]
    resources:
      limits:
        nvidia.com/gpu: 1
