cloud/deployment/k8s_manifest/cpu-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cpu-service
  namespace: default
spec:
  type: ClusterIP  # No external LB needed
  selector:
    app: cpu-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5050
