cloud/deployment/k8s_manifest/gpu-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gpu-service
  namespace: default
spec:
  type: ClusterIP  # No external LB needed
  selector:
    app: gpu-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5050
