cloud/deployment/k8s_manifest/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/load-balancer-type: "alb"
    alb.ingress.kubernetes.io/target-type: "ip"  # Important: Routes to pod IPs
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  rules:
    - http:
        paths:
          - path: /start_train
            pathType: Prefix
            backend:
              service:
                name: gpu-service
                port:
                  number: 80
          - path: /start_compile
            pathType: Prefix
            backend:
              service:
                name: cpu-service
                port:
                  number: 80
